--- a/Utal-reservas/public/css/app.css
+++ b/Utal-reservas/public/css/app.css
@@ -90,6 +90,7 @@ header span {
     font-size: 18px;
     cursor: pointer;
     font-weight: bold;
+    font-style: none;
 }
 
 .separacion {
@@ -112,7 +113,7 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 25px;
+    gap: 20px;
     padding: 15px 0px;
 
 }
