--- a/Utal-reservas/public/css/app.css
+++ b/Utal-reservas/public/css/app.css
@@ -91,15 +91,12 @@ header span {
 .btnAyuda {
     width: 75%;
     margin: auto;
-    padding: 8px;
-    background-color: chocolate;
-    border-width: 0px;
-    border-radius: 4px;
     color: white;
     font-size: 18px;
     cursor: pointer;
     font-weight: bold;
     font-style: none;
+    text-align: center;
 }
 
 .separacion {
@@ -210,7 +207,8 @@ form input {
     }
 
 .boton_servicios:hover{                  /* Cuando se pasa por encima del boton  */ 
-    background-color: #d77c26;
+    background-color: #f39c2d;
+    border: #f39c2d;
     }
 
 .boton_servicios:active {                /*  Cuando se clikea */ 
@@ -223,10 +221,10 @@ form input {
     height: 75px;
     border-radius: 50%;
     margin-left: 15%;
-    border: 1px solid #df7a1b; /*anchura, estilo y color borde*/
+    border: 1px solid #f39c2d; /*anchura, estilo y color borde*/
     text-align: center;
     padding: 0px; /*espacio alrededor texto*/
-    background-color: #df7a1b; /*color botón*/
+    background-color: #f39c2d; /*color botón*/
     color: #000000; /*color texto*/
     text-decoration: none; /*decoración texto*/
     /*text-transform: uppercase; capitalización texto*/
@@ -239,8 +237,8 @@ form input {
     padding: 0.5rem;     
     width: 50%;     
     background-color: #fff;     
-    border: 1px solid #FF8C40;     
-    color: #FF8C40;     
+    border: 1px solid #f39c2d;     
+    color: #f39c2d;     
     font-size: large;  
     }
 
@@ -250,8 +248,8 @@ form input {
     padding: 0.5rem;     
     width: 50%;     
     background-color: #fff;     
-    border: 1px solid #FF8C40;     
-    color: #FF8C40;     
+    border: 1px solid #f39c2d;
+    color: #f39c2d;     
     font-size: large;  
     }
 
@@ -262,21 +260,26 @@ form input {
     padding: 0.05rem;     
     width: 30%;     
     background-color: #fff;     
-    border: 1px solid #FF8C40;     
-    color: #FF8C40;     
+    border: 1px solid #f39c2d;     
+    color: #f39c2d;     
     font-size: large;  
     }
+
+.button-volver:hover{     
+    border: 1px solid #f39c2d;     
+    background-color: #f39c2d;     
+    color: #fff; 
+    }     
     
 .button-register:hover{     
-    border: 1px solid #FF8C40;     
-    background-color: #FF8C40;     
+    border: 1px solid #f39c2d;     
+    background-color: #f39c2d;     
     color: #fff; 
     } 
 
-.button-reserver:hover{   
-    display: flex;  
-    border: 1px solid #FF8C40;     
-    background-color: #FF8C40;     
+.button-reservar:hover{   
+    border: 1px solid#f39c2d;     
+    background-color:#f39c2d;
     color: #fff; 
     } 
 
@@ -317,7 +320,8 @@ form input {
     }
 
 .boton_implementos:hover{                  /* Cuando se pasa por encima del boton  */ 
-    background-color: #d77c26;
+    background-color: #f39c2d;
+    border-color: #f39c2d;
     }
 
 .boton_implementos:active {                /*  Cuando se clikea */ 
@@ -330,10 +334,10 @@ form input {
     height: 75px;
     border-radius: 50%;
     margin-left: 25%;
-    border: 1px solid #df7a1b; /*anchura, estilo y color borde*/
+    border: 1px solid #f39c2d; /*anchura, estilo y color borde*/
     text-align: center;
     padding: 0px; /*espacio alrededor texto*/
-    background-color: #df7a1b; /*color botón*/
+    background-color: #f39c2d; /*color botón*/
     color: #000000; /*color texto*/
     text-decoration: none; /*decoración texto*/
     /*text-transform: uppercase; capitalización texto*/
