--- a/Utal-reservas/public/css/app.css
+++ b/Utal-reservas/public/css/app.css
@@ -340,3 +340,38 @@ form input {
     /*text-transform: uppercase; capitalización texto*/
     font-family: 'Helvetica', sans-serif; /*tipografía texto*/
     }
+
+
+.entregar-reservas {
+    margin-top: 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: solid;
+    background-color: wheat;
+}
+
+.rut_usuario {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    margin: auto;
+}
+
+.tabla_resultados td {
+    padding: 4px 8px;
+}
+
+.tabla_resultados td input {
+    width: 50%;
+    height: 20px;
+    border-radius: 4px;
+    border: none;
+    outline: 0px;
+    margin: 0px 10px;   
+    padding: 0px 5px;
+}
+
+.tabla_resultados th {
+    padding: 0px 4px;
+}
