--- a/Utal-reservas/public/css/app.css
+++ b/Utal-reservas/public/css/app.css
@@ -90,15 +90,15 @@ header span {
 }
 
 .box_entregar_ligteblue {                   /*  Caja celeste bajo los servicios seleccionables */ 
-    display: line;;     
-    margin-left: 40%;
-    width: 25%;
+    display: block;   
+    margin-left: 42%;
+    width: 20%;
     background-color: #00cccc;
     padding: 20px 20px;
     border-radius: 12px;
 }
 .box_entregar_ligteblue1 {                   /*  Caja celeste bajo los servicios seleccionables */ 
-    display: block;;     
+    display: inline-block;
     margin-left: 28%;
     width: 50%;
     background-color: #00cccc;
