--- a/Utal-reservas/public/css/app.css
+++ b/Utal-reservas/public/css/app.css
@@ -193,6 +193,23 @@ form input {
     margin-left: 15%;
     margin-right: 15%;
 }
+
+.box_recepcionar_ligteblue {                   /*  Caja celeste bajo los servicios seleccionables */ 
+    display: block;   
+    margin-left: 42%;
+    width: 20%;
+    background-color: #00cccc;
+    padding: 20px 20px;
+    border-radius: 12px;
+}
+.box_recepcionar_ligteblue1 {                   /*  Caja celeste bajo los servicios seleccionables */ 
+    display: inline-block;
+    margin-left: 28%;
+    width: 50%;
+    background-color: #00cccc;
+    padding: 20px 20px;
+    border-radius: 12px;
+}
     
 
 .boton_servicios {                        /* Boton como tal  */ 
