Corrección de diseño
Se corrigió el diseño de css que se perdió durante los pull request

--- a/Utal-reservas/public/css/app.css
+++ b/Utal-reservas/public/css/app.css
@@ -79,6 +79,16 @@ header span {
     border-radius: 12px;
 }
 
+.box_reserva_ligteblue {                   /*  Caja celeste bajo los servicios seleccionables */ 
+    display: flex;
+    flex-direction: column;
+    margin-left: 32%;
+    width: 40%;
+    background-color: #00cccc;
+    padding: 20px 30px;
+    border-radius: 12px;
+}
+
 .box_entregar_ligteblue {                   /*  Caja celeste bajo los servicios seleccionables */ 
     display: block;   
     margin-left: 42%;
